--- a/styles/main.css
+++ b/styles/main.css
@@ -1062,9 +1062,52 @@ hr {
     margin-right: .5rem
 }
 
-.img-fluid {
-    max-width: 100%;
-    height: auto
+/* .img-fluid {
+    width: 100%;
+    height: 100%;
+} */
+
+@media (max-width: 767.98px) {
+    .img-container {
+        width: 97%;
+        height: 85%;
+        overflow: hidden;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .img-fluid {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; 
+        object-position: center 50%;       
+    }
+}
+
+@media (min-width: 991.98px) {
+    .img-container {
+        height: 200px; 
+        width: 380px;
+        overflow: hidden;
+       
+
+    }
+}
+
+@media (min-width: 991.98px) {   
+    .img-fluid {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; 
+        object-position: center 50%;       
+    }
+}
+
+@media (min-width: 991.98px) {
+    .text-bio{
+        margin-right: 74px;
+        font-size: 15px;
+    }
 }
 
 .container {
@@ -1123,12 +1166,12 @@ hr {
     padding-left: 0
 }
 
-.col-auto,.col-md,.col-md-3,.col-md-7,.col-sm-6 {
+/* .col-auto,.col-md,.col-md-3,.col-md-7,.col-sm-6,.col-sm-12 {
     position: relative;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px
-}
+} */
 
 .col-auto {
     flex: 0 0 auto;
@@ -2166,9 +2209,17 @@ a.text-lightgrey:focus,a.text-lightgrey:hover {
     }
 }
 
+@media (min-width: 1200px) {
+    .nav-toggle {
+        top:74px;
+       
+    }
+}
+
 @media (max-width: 767.98px) {
     .nav-toggle {
-        top:35px
+        top:15px;
+        margin-right: 10px;
     }
 }
 
