--- a/styles/main.css
+++ b/styles/main.css
@@ -1146,6 +1146,8 @@ hr {
     }
 }
 
+
+
 @media (min-width: 1900px) {
     h3 {
         font-size: 21px;
@@ -2547,4 +2549,370 @@ hr {
 
 .media-description {
     white-space: normal
+}
+
+
+
+.slider_container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    overflow: hidden;
+    margin-left: auto;
+}
+
+.slider{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    animation: 20s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
+}
+.slide{
+    position: relative;
+    min-width: 100%;
+    height: 100%;
+}
+.slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    object-position: center 50%;
+}
+
+@keyframes sliding {
+    0% { 
+        transform: translateX(0%);
+    }
+    20%{
+        transform: translateX(0%);
+    }
+    25%{
+        transform: translateX(-100%);
+    }
+    45%{
+        transform: translateX(-100%);
+    }
+    50%{
+        transform: translateX(-200%);
+    }
+    70%{
+        transform: translateX(-200%);
+    }
+    75%{
+        transform: translateX(-300%);
+    }
+    95%{
+        transform: translateX(-300%);
+    }
+    100%{
+        transform: translateX(-400%);
+    }
+    
+}
+
+
+
+@media (min-width: 1800px) {
+    .slider-content{
+        width:60%;
+        height: 100%; 
+        padding-top: 15vh;
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
+        
+       /*  position: relative; */
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-desc{
+        width: 40%;
+        height: 100%;
+        padding-left: 90px;
+        padding-top:15vh;
+        display: flex;
+        align-items: flex-end;
+        text-align: justify;
+        flex-wrap: wrap;
+        position: relative;        
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-desc-content{
+        align-self: flex-end;   
+        display: inline-block; 
+        bottom: 0;
+        padding-top:300px;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-title{
+        font-size: 36px; 
+        display: flex;
+        letter-spacing: 2px;
+         font-weight: 500; 
+         font-family: F37 Ginger; 
+         color: #A58F74;
+         position: relative;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-text{
+        color: #5c5c5c;
+        padding-top: 20px;
+        padding-bottom: 35px;
+        text-align: justify;
+        display: flex;
+        position: relative;
+        width: calc(100% - 310px);
+        margin-right: auto;
+    }
+}
+
+
+@media (min-width: 1800px) {
+    .slider-watch{
+        white-space: nowrap;
+        font-size: 15px;
+        display: flex;
+        position: relative;
+        padding-right: 100px;
+       
+
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logos{
+       padding-right: 100px;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logo{
+        width: 100px; 
+        padding-top: 50px; 
+        padding-right: 30px;
+        height: 100%;
+        object-fit: cover; 
+        object-position: center 50%; 
+    }
+}
+
+
+
+
+
+
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-content{
+        width:60%;
+        height: 100%; 
+        padding-top: 15vh;
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
+        
+       /*  position: relative; */
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-desc{
+        width: 40%;
+        height: 100%;
+        padding-left: 90px;
+        padding-top:15vh;
+        display: flex;
+        align-items: flex-end;
+        text-align: justify;
+        flex-wrap: wrap;
+        position: relative;        
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-desc-content{
+        align-self: flex-end;   
+        display: inline-block; 
+        bottom: 0;
+        padding-top:200px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-title{
+        font-size: 36px; 
+        display: flex;
+        letter-spacing: 2px;
+         font-weight: 500; 
+         font-family: F37 Ginger; 
+         color: #A58F74;
+         position: relative;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-text{
+        color: #5c5c5c;
+        padding-top: 20px;
+        padding-bottom: 35px;
+        text-align: justify;
+        display: flex;
+        position: relative;
+        width: calc(100% - 150px);
+        margin-right: auto;
+    }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-watch{
+        white-space: nowrap;
+        font-size: 15px;
+        display: flex;
+        position: relative;
+        padding-right: 100px;
+       
+
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logos{
+       padding-right: 100px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo{
+        width: 80px; 
+        padding-top: 50px; 
+        padding-right: 30px;
+        height: 100%;
+        object-fit: cover; 
+        object-position: center 50%; 
+    }
+}
+
+
+
+
+
+
+/* Styles for screens between 992px and 1199px (laptops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+    /* Your styles for laptops go here */
+}
+
+/* Styles for screens between 768px and 991px (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+    /* Your styles for tablets go here */
+}
+
+
+
+/* Styles for screens up to 767px (phones) */
+
+@media (max-width: 767px) {
+    .slider-content{
+        width:100%;
+        height: 100%; 
+        padding-top:25vh;
+        display: flex;
+        flex-direction: column;
+        align-self: flex-end;
+        
+       /*  position: relative; */
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-desc{
+        width: 100%;
+        height: 100%;
+        padding-top:30px;
+        padding-left: 70px;
+        display: flex;
+        align-items: flex-end;
+        text-align: justify;
+        flex-wrap: wrap;
+        position: relative;    
+        order: 1;    
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-desc-content{
+        align-self: flex-end;   
+        display: inline-block; 
+        bottom: 0;
+        
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-title{
+        font-size: 1.1rem; 
+        display: flex;
+        letter-spacing: 2px;
+         font-weight: 100; 
+         font-family: F37 Ginger; 
+         color: #A58F74;
+         position: relative;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-text{
+        color: #5c5c5c;
+        padding-top: 10px;
+        text-align: justify;
+        display: flex;
+        position: relative;
+        width: calc(100% - 74px);
+        margin-right: auto;
+        font-size: 0.75rem;
+    }
+}
+
+
+@media (max-width: 767px){
+    .slider-watch{
+        white-space: nowrap;
+        font-size: 0.75rem;
+        display: flex;
+        position: relative;
+        padding-right: 100px;
+       
+
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logos{
+       padding-right: 20px;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo{
+        width: 70px; 
+        padding-right: 30px;
+        height: 100%;
+        object-fit: cover; 
+        object-position: center 50%; 
+    }
 }
