--- a/styles/main.css
+++ b/styles/main.css
@@ -2564,7 +2564,7 @@ hr {
     margin-left: auto;
 }
 
-.slider{
+.slider-10{
     position: relative;
     width: 100%;
     height: 100%;
@@ -2572,7 +2572,18 @@ hr {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    animation: 20s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
+    animation: 50s sliding-10 infinite;
+}
+
+.slider-12{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    animation: 60s sliding-12 infinite;
 }
 .slide{
     position: relative;
@@ -2586,35 +2597,86 @@ hr {
     object-position: center 50%;
 }
 
-@keyframes sliding {
-    0% { 
+
+@keyframes sliding-10 {
+    0% {
         transform: translateX(0%);
     }
-    20%{
-        transform: translateX(0%);
-    }
-    25%{
+    10% {
         transform: translateX(-100%);
     }
-    45%{
-        transform: translateX(-100%);
-    }
-    50%{
+    20% {
         transform: translateX(-200%);
     }
-    70%{
-        transform: translateX(-200%);
-    }
-    75%{
+    30% {
         transform: translateX(-300%);
     }
-    95%{
-        transform: translateX(-300%);
-    }
-    100%{
+    40% {
         transform: translateX(-400%);
     }
+    50% {
+        transform: translateX(-500%);
+    }
+    60% {
+        transform: translateX(-600%);
+    }
+    70% {
+        transform: translateX(-700%);
+    }
+    80% {
+        transform: translateX(-800%);
+    }
+    90% {
+        transform: translateX(-900%);
+    }
     
+    100% {
+        transform: translateX(0%);
+    }
+
+}
+
+@keyframes sliding-12 {
+    0% {
+        transform: translateX(0%);
+    }
+    8.33% {
+        transform: translateX(-100%);
+    }
+    16.66% {
+        transform: translateX(-200%);
+    }
+    25% {
+        transform: translateX(-300%);
+    }
+    33.33% {
+        transform: translateX(-400%);
+    }
+    41.66% {
+        transform: translateX(-500%);
+    }
+    50% {
+        transform: translateX(-600%);
+    }
+    58.33% {
+        transform: translateX(-700%);
+    }
+    66.66% {
+        transform: translateX(-800%);
+    }
+    75% {
+        transform: translateX(-900%);
+    }
+    83.33% {
+        transform: translateX(-1000%);
+    }
+    91.66% {
+        transform: translateX(-1100%);
+    }
+    
+    100% {
+        transform: translateX(-0%);
+    }
 }
 
 
