--- a/styles/main.css
+++ b/styles/main.css
@@ -2572,7 +2572,7 @@ hr {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    animation: 50s sliding-10 infinite;
+    animation: 50s sliding-10 linear infinite;
 }
 
 .slider-12{
@@ -2719,7 +2719,7 @@ hr {
 
 @media (min-width: 1800px) {
     .slider-title{
-        font-size: 36px; 
+        font-size: 25px; 
         display: flex;
         letter-spacing: 2px;
          font-weight: 500; 
@@ -2763,12 +2763,46 @@ hr {
 
 @media (min-width: 1800px) {
     .slider-logo{
-        width: 100px; 
         padding-top: 50px; 
+        width: 100px;
         padding-right: 30px;
         height: 100%;
         object-fit: cover; 
         object-position: center 50%; 
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logo-lightframers{
+       width: 22%;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logo-escac{
+       width: 16%;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logo-sae{
+       width: 12%;
+    }
+}
+
+@media (min-width: 1800px) {
+    .slider-logo-avisual{
+       width: 17%;
+    }
+}
+@media (min-width: 1800px) {
+    .slider-logo-ltl{
+       width: 17%;
+    }
+}
+@media (min-width: 1800px) {
+    .slider-logo-feten{
+       width: 17%;
     }
 }
 
@@ -2795,7 +2829,7 @@ hr {
     .slider-desc{
         width: 40%;
         height: 100%;
-        padding-left: 90px;
+        padding-left: 100px;
         padding-top:15vh;
         display: flex;
         align-items: flex-end;
@@ -2816,7 +2850,7 @@ hr {
 
 @media (min-width: 1200px) and (max-width: 1799px) {
     .slider-title{
-        font-size: 36px; 
+        font-size: 25px; 
         display: flex;
         letter-spacing: 2px;
          font-weight: 500; 
@@ -2860,7 +2894,7 @@ hr {
 
 @media (min-width: 1200px) and (max-width: 1799px) {
     .slider-logo{
-        width: 80px; 
+        width: 100px; 
         padding-top: 50px; 
         padding-right: 30px;
         height: 100%;
@@ -2869,8 +2903,40 @@ hr {
     }
 }
 
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-lightframers{
+       width: 30%;
+    }
+}
 
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-escac{
+       width: 23%;
+    }
+}
 
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-sae{
+       width:18%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-avisual{
+       width: 24%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px)  {
+    .slider-logo-ltl{
+       width: 21%;
+    }
+}
+@media (min-width: 1200px) and (max-width: 1799px)  {
+    .slider-logo-feten{
+       width: 23%;
+    }
+}
 
 
 
@@ -2976,5 +3042,40 @@ hr {
         height: 100%;
         object-fit: cover; 
         object-position: center 50%; 
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo-lightframers{
+       width: 30%;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo-escac{
+       width: 23%;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo-sae{
+       width:18%;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo-avisual{
+       width: 24%;
+    }
+}
+
+@media (max-width: 767px) {
+    .slider-logo-ltl{
+       width: 21%;
+    }
+}
+@media (max-width: 767px)  {
+    .slider-logo-feten{
+       width: 23%;
     }
 }
