changed slider keyframes

--- a/styles/main.css
+++ b/styles/main.css
@@ -2762,34 +2762,63 @@ hr {
     0% {
         transform: translateX(0%);
     }
+    5% {
+        transform: translateX(0%);
+    }
     10% {
+        transform: translateX(-100%);
+    }
+    15% {
         transform: translateX(-100%);
     }
     20% {
         transform: translateX(-200%);
     }
+    25% {
+        transform: translateX(-200%);
+    }
     30% {
+        transform: translateX(-300%);
+    }
+    35% {
         transform: translateX(-300%);
     }
     40% {
         transform: translateX(-400%);
     }
+    45% {
+        transform: translateX(-400%);
+    }
     50% {
+        transform: translateX(-500%);
+    }
+    55% {
         transform: translateX(-500%);
     }
     60% {
         transform: translateX(-600%);
     }
+    65% {
+        transform: translateX(-600%);
+    }
     70% {
+        transform: translateX(-700%);
+    }
+    75% {
         transform: translateX(-700%);
     }
     80% {
         transform: translateX(-800%);
     }
+    85% {
+        transform: translateX(-800%);
+    }
     90% {
         transform: translateX(-900%);
     }
-    
+    95% {
+        transform: translateX(-900%);
+    }   
     100% {
         transform: translateX(0%);
     }
@@ -2800,42 +2829,77 @@ hr {
     0% {
         transform: translateX(0%);
     }
+    4.16% {
+        transform: translateX(0%);
+    }
     8.33% {
+        transform: translateX(-100%);
+    }
+    12.49% {
         transform: translateX(-100%);
     }
     16.66% {
         transform: translateX(-200%);
     }
+    20.82% {
+        transform: translateX(-200%);
+    }
     25% {
+        transform: translateX(-300%);
+    }
+    29.16% {
         transform: translateX(-300%);
     }
     33.33% {
         transform: translateX(-400%);
     }
+    37.49% {
+        transform: translateX(-400%);
+    }
     41.66% {
+        transform: translateX(-500%);
+    }
+    45.82% {
         transform: translateX(-500%);
     }
     50% {
         transform: translateX(-600%);
     }
+    54.16% {
+        transform: translateX(-600%);
+    }
     58.33% {
+        transform: translateX(-700%);
+    }
+    62.49% {
         transform: translateX(-700%);
     }
     66.66% {
         transform: translateX(-800%);
     }
+    70.82% {
+        transform: translateX(-800%);
+    }
     75% {
+        transform: translateX(-900%);
+    }
+    79.16% {
         transform: translateX(-900%);
     }
     83.33% {
         transform: translateX(-1000%);
     }
+    87.49% {
+        transform: translateX(-1000%);
+    }
     91.66% {
         transform: translateX(-1100%);
     }
-    
+    95.82% {
+        transform: translateX(-1100%);
+    }
     100% {
-        transform: translateX(-0%);
+        transform: translateX(0%);
     }
 }
 
