--- a/styles/main.css
+++ b/styles/main.css
@@ -3244,6 +3244,16 @@ hr {
 }
 
 @media (min-width: 1800px) {
+    .slider-desc-festivals{        
+        padding-top:5vh !important;               
+    }
+
+    .slider-desc-festivals .slider-title{
+        padding-top: 10vh;
+    }
+}
+
+@media (min-width: 1800px) {
     .slider-desc-content{
         align-self: flex-end;   
         display: inline-block; 
@@ -3380,6 +3390,23 @@ hr {
        width: 17%;
     }
 }
+@media (min-width: 1800px) {
+    .slider-logo-fest-tokyo{
+        
+       width: 17.5%;
+    }
+}
+@media (min-width: 1800px) {
+    .slider-logo-fest-nytristate{
+       width: 20%;
+    }
+}
+@media (min-width: 1800px) {
+    .slider-logo-fest-lhiff{
+       width: 22%;
+       padding-top:50px;
+    }
+}
 
 
 
@@ -3411,6 +3438,20 @@ hr {
         text-align: justify;
         flex-wrap: wrap;
         position: relative;        
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-desc-festivals{        
+        padding-top: 0vh !important;               
+    }
+
+    .slider-desc-festivals .slider-title{
+        padding-top: 9vh;
+    }
+
+    .slider-desc-content{
+        padding-top:20vh !important;
     }
 }
 
@@ -3552,6 +3593,23 @@ hr {
     }
 }
 
+@media (min-width: 1200px) and (max-width: 1799px){
+    .slider-logo-fest-tokyo{
+        
+       width: 19%;
+    }
+}
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-fest-nytristate{
+       width: 22%;
+    }
+}
+@media (min-width: 1200px) and (max-width: 1799px) {
+    .slider-logo-fest-lhiff{
+       width: 23%;
+       padding-top:50px;
+    }
+}
 
 
 @media (min-width: 933px) and (max-width: 1199px){
@@ -3580,6 +3638,16 @@ hr {
         flex-wrap: wrap;
         position: relative;    
         order: 1;    
+    }
+}
+
+@media (min-width: 933px) and (max-width: 1199px){
+    .slider-desc-festivals{        
+        padding-top:2vh !important;               
+    }
+
+    .slider-desc-festivals .slider-title{
+        padding-top: 5vh;
     }
 }
 
@@ -3721,10 +3789,29 @@ hr {
        width: 13%;
     }
 }
+
 @media (min-width: 933px) and (max-width: 1199px){
     .slider-logo-feten{
        width: 16%;
        padding-bottom: 10px;
+    }
+}
+
+@media (min-width: 933px) and (max-width: 1199px){
+    .slider-logo-fest-lhiff{
+       width: 15%;
+    }
+}
+
+@media (min-width: 933px) and (max-width: 1199px){
+    .slider-logo-fest-nytristate{
+       width:15%;
+    }
+}
+
+@media (min-width: 933px) and (max-width: 1199px){
+    .slider-logo-fest-tokyo{
+       width: 14%;
     }
 }
 
@@ -3760,6 +3847,25 @@ hr {
 }
 
 @media (min-width: 450px) and (max-width: 932px){
+    .slider-desc-festivals{        
+        padding-top:2vh !important;               
+    }
+
+    .slider-desc-festivals .slider-title{
+        padding-top: 7vh;
+    }
+}
+
+@media (min-width: 450px) and (max-width: 932px){
+    .slider-desc-content{
+        align-self: flex-end;   
+        display: inline-block; 
+        bottom: 0;
+        
+    }
+}
+
+@media (min-width: 450px) and (max-width: 932px){
     .slider-desc-content{
         align-self: flex-end;   
         display: inline-block; 
@@ -3904,6 +4010,25 @@ hr {
     }
 }
 
+@media (min-width: 450px) and (max-width: 932px){
+    .slider-logo-fest-lhiff{
+       width: 15%;
+       padding-top:10px
+    }
+}
+
+@media (min-width: 450px) and (max-width: 932px){
+    .slider-logo-fest-nytristate{
+       width:15%;
+    }
+}
+
+@media (min-width: 450px) and (max-width: 932px){
+    .slider-logo-fest-tokyo{
+       width: 13%;
+    }
+}
+
 
 
 @media (max-width: 450px) {
@@ -3931,6 +4056,16 @@ hr {
         flex-wrap: wrap;
         position: relative;    
         order: 1;    
+    }
+}
+
+@media (max-width: 450px){
+    .slider-desc-festivals{        
+        padding-top:3vh !important;               
+    }
+
+    .slider-desc-festivals .slider-title{
+        padding-top: 4vh;
     }
 }
 
@@ -4070,5 +4205,22 @@ hr {
 @media (max-width: 450px)  {
     .slider-logo-feten{
        width: 23%;
+    }
+}
+@media (max-width: 450px) {
+    .slider-logo-fest-lhiff{
+       width: 23%;
+    }
+}
+
+@media (max-width: 450px) {
+    .slider-logo-fest-nytristate{
+       width:20%;
+    }
+}
+
+@media (max-width: 450px) {
+    .slider-logo-fest-tokyo{
+       width: 19%;
     }
 }
