--- a/styles/main.css
+++ b/styles/main.css
@@ -3244,12 +3244,13 @@ hr {
 }
 
 @media (min-width: 1800px) {
-    .slider-desc-festivals{        
-        padding-top:5vh !important;               
-    }
-
+    
     .slider-desc-festivals .slider-title{
-        padding-top: 10vh;
+         padding-top: 80px; 
+    }
+    .slider-desc-festivals .slider-desc-content{
+        
+        padding-top:140px;
     }
 }
 
@@ -3393,18 +3394,18 @@ hr {
 @media (min-width: 1800px) {
     .slider-logo-fest-tokyo{
         
-       width: 17.5%;
+       width: 18%;
     }
 }
 @media (min-width: 1800px) {
     .slider-logo-fest-nytristate{
-       width: 20%;
+       width: 21%;
     }
 }
 @media (min-width: 1800px) {
     .slider-logo-fest-lhiff{
-       width: 22%;
-       padding-top:50px;
+       width: 24%;
+       padding-top:60px;
     }
 }
 
@@ -3442,18 +3443,17 @@ hr {
 }
 
 @media (min-width: 1200px) and (max-width: 1799px) {
-    .slider-desc-festivals{        
-        padding-top: 0vh !important;               
-    }
-
+    
     .slider-desc-festivals .slider-title{
-        padding-top: 9vh;
+         padding-top: 70px; 
     }
-
-    .slider-desc-content{
-        padding-top:20vh !important;
+    .slider-desc-festivals .slider-desc-content{
+        
+        padding-top:77px;
     }
 }
+
+
 
 @media (min-width: 1200px) and (max-width: 1799px) {
     .slider-desc-content{
@@ -3596,18 +3596,18 @@ hr {
 @media (min-width: 1200px) and (max-width: 1799px){
     .slider-logo-fest-tokyo{
         
-       width: 19%;
+       width: 20%;
     }
 }
 @media (min-width: 1200px) and (max-width: 1799px) {
     .slider-logo-fest-nytristate{
-       width: 22%;
+       width: 23%;
     }
 }
 @media (min-width: 1200px) and (max-width: 1799px) {
     .slider-logo-fest-lhiff{
-       width: 23%;
-       padding-top:50px;
+       width: 24%;
+       padding-top:60px;
     }
 }
 
@@ -4209,18 +4209,19 @@ hr {
 }
 @media (max-width: 450px) {
     .slider-logo-fest-lhiff{
-       width: 23%;
+       width: 24%;
+       padding-top: 3px;
     }
 }
 
 @media (max-width: 450px) {
     .slider-logo-fest-nytristate{
-       width:20%;
+       width:24%;
     }
 }
 
 @media (max-width: 450px) {
     .slider-logo-fest-tokyo{
-       width: 19%;
+       width: 20%;
     }
 }
